[gd_scene load_steps=3 format=3 uid="uid://cu7p1q0r4d6b4"]

[ext_resource type="Script" path="res://addons/AdaptiSound/DEMO/Scenes/ParallelScene.gd" id="1_x4u54"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ywk37"]

[node name="ParallelScene" type="Node2D"]
script = ExtResource("1_x4u54")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
material = SubResource("ShaderMaterial_ywk37")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.184314, 0.203922, 0.219608, 1)

[node name="Label" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "ParallelTrack"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 384.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Layer1" type="CheckButton" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Layer1"

[node name="Layer2" type="CheckButton" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Layer2"

[node name="Layer3" type="CheckButton" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Layer3"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CheckButton" type="CheckButton" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "All Layers"

[node name="Trigger" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Trigger"

[node name="Stop" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Stop"

[node name="Panel" type="Panel" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Console" type="Label" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_right = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="toggled" from="CanvasLayer/Control/CenterContainer/VBoxContainer/HBoxContainer/Layer1" to="." method="_on_layer_1_toggled"]
[connection signal="toggled" from="CanvasLayer/Control/CenterContainer/VBoxContainer/HBoxContainer/Layer2" to="." method="_on_layer_2_toggled"]
[connection signal="toggled" from="CanvasLayer/Control/CenterContainer/VBoxContainer/HBoxContainer/Layer3" to="." method="_on_layer_3_toggled"]
[connection signal="toggled" from="CanvasLayer/Control/CenterContainer/VBoxContainer/HBoxContainer2/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/Trigger" to="." method="_on_trigger_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/Stop" to="." method="_on_stop_pressed"]
